<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Enter your pin:"
        android:padding="8dp" />
    
       <View android:layout_width="wrap_content" 
    android:layout_height="1dp" 
    android:background="#000000"/>

  <TextView
        android:id="@+id/dialog_slower"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_slow" 
        android:padding="8dp" />
        
  <TextView
        android:id="@+id/dialog_faster"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_fast"
        android:padding="8dp"  />

    <LinearLayout 
        android:id="@+id/dialog_choose"
        android:layout_width="fill_parent"
        android:padding="8dp" 
        android:layout_height="wrap_content">
        
        <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:text="@string/dialog_custom"/>
        
        <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_marginRight="16dp"
        android:text="0"/>
        
          <SeekBar
            android:id="@+id/volume_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:progress="0"
            android:max="100"
           
           />
        
    </LinearLayout>
    <TextView
        android:id="@+id/dialog_cancel"
        android:padding="8dp" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_cancel" />
    </LinearLayout>
    
    
    
    
    

