<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    

    

<LinearLayout android:id="@+id/dialog_slower"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">
  <TextView
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_slow" 
        android:textSize="16sp"
        
       />
  
  <CheckBox 
      android:id="@+id/dialog_checkbox_slow"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="0"
      />
  
  </LinearLayout>
  
           <View android:layout_width="wrap_content" 
    android:layout_height="1dp" 
  android:layout_marginLeft="8dp"
  android:layout_marginRight="8dp"
    android:background="#AA000000"/>
           
           <LinearLayout android:id="@+id/dialog_normal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">
  <TextView
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_normal" 
        android:textSize="16sp"
        
       />
  
  <CheckBox 
      android:id="@+id/dialog_checkbox_normal"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="0"
      />
  
  </LinearLayout>
  
           <View android:layout_width="wrap_content" 
    android:layout_height="1dp" 
  android:layout_marginLeft="8dp"
  android:layout_marginRight="8dp"
    android:background="#AA000000"/>
        
 <LinearLayout android:id="@+id/dialog_faster"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">
  <TextView
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_fast" 
        android:textSize="16sp"
       
       />
  
  <CheckBox 
       android:id="@+id/dialog_checkbox_faster"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_weight="0"
      />
  
  </LinearLayout>
  
           <View android:layout_width="wrap_content" 
    android:layout_height="1dp" 
  android:layout_marginLeft="8dp"
  android:layout_marginRight="8dp"
    android:background="#AA000000"/>

    <LinearLayout 
        android:id="@+id/dialog_choose"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:padding="16dp" 
        android:layout_height="wrap_content">
        
        <TextView 
            android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
         android:textSize="14sp"
        android:text="@string/dialog_custom"/>
        
        <TextView 
            android:id="@+id/dialog_custom_seekbar_value"
            android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_marginRight="16dp"
        android:text="5"/>
        
          <SeekBar
            android:id="@+id/dialog_speed_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:progress="0"
            
           
           />
        
    </LinearLayout>
    
           <View android:layout_width="wrap_content" 
    android:layout_height="1dp" 
   android:layout_margin="8dp"
    android:background="#AA000000"/>

    </LinearLayout>
    
    
    
    
    

